# vinyl-listen-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a8551e314b6_create_models_releases_sessions_.py  2f4a9c1d8e6b_add_session_tracks.py  3d9f1a2b4c6e_add_session_group_metadata.py  4e2a1c9d8b70_add_spotify_listening_import.py  5f1a2b3c4d6e_add_release_favorites.py  6b7c8d9e0f12_add_collection_settings.py  7ab6c5d4e3f2_add_identify_job_client_key.py  8c1d2e3f4a5b_add_session_groups.py  9c6e2a1f4b80_add_spotify_rollups_and_matches.py  a2b3c4d5e6f7_add_auth_audit_events.py  a5427b530a12_latest_db_revision.py  a6b7c8d9e0f1_add_session_user_scope.py  a8b9c0d1e2f3_add_manual_release_session_target.py  ab12cd34ef56_add_provider_integrations.py  b1c2d3e4f5a6_add_collection_folders.py  b3c4d5e6f7a8_add_auth_code_failed_attempts.py  b7c8d9e0f1a2_add_user_collection_scope.py  b7f3c9d2a4e1_add_identify_jobs.py  c2f3a4b5d6e7_add_auth_core_tables.py  c4d5e6f7a8b9_add_manual_release_schema.py  c8d9e0f1a2b3_scope_async_ai_spotify.py  c8f2d4a9b6e1_add_ai_chat_history.py  d2b8c7e9f041_add_identify_job_stale_recovery_index.py  d3e4f5a6b7c8_add_consumed_refresh_tokens.py  d9e0f1a2b3c4_add_account_deletion_audit.py  e0f1a2b3c4d5_scope_session_moods.py  e4f5a6b7c8d9_add_session_track_artist.py  e6a7b8c9d012_add_collection_membership_to_releases.py  e7f8a9b0c1d2_add_manual_release_year.py  eed6974773b8_init.py  f1a2b3c4d5e6_add_usage_counter_index.py  f3a4b5c6d7e8_add_identify_job_cancel_requested_at.py  f5a6b7c8d9e0_add_collection_settings_user_scope.py  f7c8d9e0a123_add_collection_sync_jobs.py
backend/app/: main.py
backend/app/ai/: __init__.py  chat_adapter.py  insight_tools.py
backend/app/api/: auth_dependencies.py  router.py
backend/app/core/: config.py  logging.py  rate_limit.py  runtime_dependencies.py
backend/app/database/: base.py  db.py  session.py
backend/app/models/: __init__.py  ai_chat.py  auth.py  collection_folders.py  collection_settings.py  collection_sync_job.py  discogs_release_cache.py  identify_job.py  provider_integration.py  releases.py  sessions.py  sessions_moods.py  spotify_listening.py
backend/app/repositories/: ai_chat_repository.py  analytics_repository.py  auth_repository.py  collection_folders_repository.py  collection_settings_repository.py  collection_sync_job_repository.py  discogs_release_repository.py  identify_job_repository.py  manual_release_repository.py  provider_integration_repository.py  releases_repository.py  session_groups_repository.py  sessions_moods_repository.py  sessions_repository.py  spotify_listening_repository.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  auth.py  collection.py  identify.py  integrations.py  manual_releases.py  releases.py  sessions.py
backend/app/services/: __init__.py  account_data_mutation.py  ai_insights_service.py  analytics_service.py  auth_account_service.py  auth_email_delivery.py  auth_token_service.py  collection_sync_job_service.py  collection_sync_service.py  discogs_integration_service.py  discogs_service.py  entitlement_service.py  identify_job_service.py  identify_service.py  manual_release_cover_storage.py  manual_release_policy.py  manual_release_service.py  password_hashing.py  release_import_service.py  release_mapper.py  session_groups_service.py  sessions_service.py  spotify_listening_import_service.py  spotify_listening_rollup_service.py  token_cipher.py
backend/app/utils/: discogs_display.py  release_formats.py  spotify_text.py
backend/benchmarks/: ocr_golden_cases.example.json
backend/scripts/: benchmark_ocr_backends.py
backend/tests/: conftest.py  pytest.ini  test-automation-structure.md  test_main.py
backend/tests/ai/: __init__.py  test_chat_adapter.py  test_insight_tools.py
(+210 files in other folders)
