[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
/(
    venv
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"

exclude = [
    "venv",
    "__pycache__",
]

fix = true


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplification rules
    "RET", # return correctness rules
    "ARG", # unused argument detection (API hygiene)
]


[tool.ruff.lint.isort]
known-first-party = ["app"]
[tool.pytest.ini_options]
testpaths = ["tests"]
[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "iam.alexgarber@protonmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
