[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    venv
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py313"

exclude = [
    "venv",
    "__pycache__",
]

fix = true


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplification rules
    "RET", # return correctness rules
    "ARG", # unused argument detection (API hygiene)
]


[tool.ruff.lint.isort]
known-first-party = ["app"]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "iam.alexgarber@protonmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "certifi==2026.2.25",
    "fastapi==0.135.1",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "SQLAlchemy==2.0.48",
    "uvicorn==0.41.0",
]

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
httpx = "0.28.1"
pre-commit = "4.5.1"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
ruff = "0.15.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
